Commit al master en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,17 @@
 		<link rel="stylesheet" href="css/style.css"/ >
 	</head>
 	<body>
-		<h1>Aquí aremos el blog<h1/>
-		<p>Este será el parrafo</p>
+		<div id = "container">
+			<div id="post">
+				<h1>Aquí aremos el blog, (bien co)<h1/>
+				<p>Este será el parrafo, lo que se puede
+					 hacer con ramas
+					 lo explicaremos aquí
+				</p>
+			<div/>
+		<div/>
+			
+		
 	<body/>
 		
 
