Estructura de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
 	</head>
 	<body>
 		<div id = "container">
+			<div id = "cabecera">
+				Cabecera
+			<div/>
 			<div id="post">
+			
 				<h1>Aquí aremos el blog, (bien co)<h1/>
 				<p>Este será el parrafo, lo que se puede
 					 hacer con ramas
