--- a/blogpost.html
+++ b/blogpost.html
@@ -6,16 +6,16 @@
 	<body>
 		<div id = "container">
 			<div id="post">
-				<h1>Aquí aremos el blog, (bien co)<h1/>
+				<h1>Aquí aremos el blog, (bien co)</h1>
 				<p>Este será el parrafo, lo que se puede
 					 hacer con ramas
 					 lo explicaremos aquí
 				</p>
-			<div/>
-		<div/>
+			</div>
+		</div>
 			
 		
-	<body/>
+	</body>
 		
 
 </html>
