Agrego contenido final al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
 					 hacer con ramas
 					 lo explicaremos aquí
 				</p>
+				<p>Los bloqs son la mejor forma de compartir inf</p>
 			</div>
 		</div>
 			
